test/compare/testdata/fixedbugs/issue677.go
// errorcheck

package main

func main() {

	if a- { } // ERROR `syntax error: unexpected {, expecting expression`

}